Update type definitions.
